# Postgresql-Advanced-Onboarding-Kit

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml
docs/: quest-1-SQL_Role_Based_Access_Control.md  quest-2-Data_Modeling.md  quest-3-DBMS_Performance.md  quest_0_Logical_Model.md  quest_1_Data_Modeling.md  quest_1_SQL_Role_Based_Access_Control.md  quest_2_Data_Modeling.md  quest_2_SQL_Role_Based_Access_Control.md  quest_3_DBMS_Performance.md  quest_4_Generate_Fake_Data.md  temporal.md  to-do.md
src/scripts/: quest_4_Generate_Fake_Data.py
src/security/: access-matrix.yaml
src/sql/: optional_extensions.sql  quest-1-SQL_Role_Based_Access_Control.sql  quest-2-Data_Modeling.sql  quest-3-DBMS_Performance.sql  quest_1_Data_Modeling.sql  quest_1_SQL_Role_Based_Access_Control.sql  quest_2_Data_Modeling.sql  quest_2_SQL_Role_Based_Access_Control.sql  quest_3_DBMS_Performance.sql
tests/: conftest.py  test_document_history.py  test_documents.py  test_generate_fake_data.py  test_project_decision_log.py  test_project_feature_links.py  test_project_history.py  test_project_tag.py  test_project_tech_stack.py  test_projects.py  test_sessions.py  test_users.py
